--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "electron": "^33.3.1",
     "electron-builder": "^25.1.8",
+    "floating-vue": "^5.2.2",
     "nuxt": "^3.15.1",
     "nuxt-electron": "0.7.0",
     "vite-plugin-electron": "^0.29.0",
