--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "1.9.0",
     "electron": "^33.3.1",
     "electron-builder": "^25.1.8",
     "floating-vue": "^5.2.2",
