--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
         "format": "prettier --write .",
-        "prepare": "husky"
+        "prepare": "husky",
+        "migrations:generate": "drizzle-kit generate"
     },
     "dependencies": {
+        "@libsql/client": "^0.15.4",
         "@nuxt/image": "1.9.0",
+        "drizzle-orm": "^0.42.0",
         "electron": "^33.3.1",
         "electron-builder": "^25.1.8",
         "floating-vue": "^5.2.2",
         "nuxt": "^3.15.1",
         "nuxt-electron": "0.7.0",
-        "nuxt-typed-router": "3.8.0",
         "vite-plugin-electron": "^0.29.0",
         "vite-plugin-electron-renderer": "^0.14.6",
         "vue": "latest",
@@ -26,6 +28,7 @@
     },
     "packageManager": "yarn@1.22.22",
     "devDependencies": {
+        "drizzle-kit": "^0.31.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.4.3",
         "prettier": "3.5.2"
