--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
         "@libsql/client": "^0.15.4",
         "@nuxt/image": "1.9.0",
         "drizzle-orm": "^0.42.0",
-        "electron": "^33.3.1",
+        "electron": "37",
         "electron-builder": "^25.1.8",
         "floating-vue": "^5.2.2",
         "nuxt": "^3.15.1",
         "nuxt-electron": "0.7.0",
         "vite-plugin-electron": "^0.29.0",
         "vite-plugin-electron-renderer": "^0.14.6",
-        "vue": "latest",
-        "vue-router": "latest"
+        "vue": "^3.5.18",
+        "vue-router": "^4.5.1"
     },
     "packageManager": "yarn@1.22.22",
     "devDependencies": {
