--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "private": true,
     "version": "0.0.1",
     "main": "dist-electron/main.js",
+    "author": "Adam Billard <contact@classydev.fr>",
+    "description": "Yet another manga viewer, focused on user-friendly UI and great UX.",
+    "license": "gnu-gpl-3.0-or-later",
     "scripts": {
         "build": "nuxi build --prerender && electron-builder",
         "dev": "nuxt dev --no-fork",
@@ -10,28 +13,31 @@
         "postinstall": "nuxt prepare",
         "format": "prettier --write .",
         "prepare": "husky",
-        "migrations:generate": "drizzle-kit generate"
+        "migrations:generate": "drizzle-kit generate",
+        "app:dir": "electron-builder --dir",
+        "app:dist": "electron-builder"
     },
     "dependencies": {
         "@libsql/client": "^0.15.4",
         "@nuxt/image": "1.9.0",
         "drizzle-orm": "^0.42.0",
-        "electron": "37",
-        "electron-builder": "^25.1.8",
+        "electron-log": "^5.4.2",
         "floating-vue": "^5.2.2",
-        "nuxt": "^3.15.1",
-        "nuxt-electron": "0.7.0",
-        "vite-plugin-electron": "^0.29.0",
-        "vite-plugin-electron-renderer": "^0.14.6",
         "vue": "^3.5.18",
         "vue-router": "^4.5.1"
     },
     "packageManager": "yarn@1.22.22",
     "devDependencies": {
         "drizzle-kit": "^0.31.0",
+        "electron": "^37.2.5",
+        "electron-builder": "^26.0.12",
         "husky": "^9.1.7",
         "lint-staged": "^15.4.3",
-        "prettier": "3.5.2"
+        "nuxt": "^3.15.1",
+        "nuxt-electron": "^0.7.0",
+        "prettier": "3.5.2",
+        "vite-plugin-electron": "^0.29.0",
+        "vite-plugin-electron-renderer": "^0.14.6"
     },
     "lint-staged": {
         "*.{js,css,md}": "prettier --write"
