--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
-  "includes": [ "src/types/*.d.ts" ]
+  "includes": [ "src/types/*.d.ts" ],
+  "compilerOptions": {
+    "paths": {
+      "#electron/*": [ "./electron/*" ],
+      "#types/*": [ "./types/*" ]
+    }
+  }
 }
